@@ -16,18 +16,23 @@
 
 /* HTTP Header Parsing */
 
-gboolean       soup_headers_parse_request  (gchar            *str, 
-					    gint              len, 
-					    GHashTable       *dest, 
-					    gchar           **req_method,
-					    gchar           **req_path,
-					    SoupHttpVersion  *ver);
+gboolean       soup_headers_parse_request     (gchar            *str, 
+					       gint              len, 
+					       GHashTable       *dest, 
+					       gchar           **req_method,
+					       gchar           **req_path,
+					       SoupHttpVersion  *ver);
 
-gboolean       soup_headers_parse_response (gchar            *str, 
-					    gint              len, 
-					    GHashTable       *dest,
-					    SoupHttpVersion  *ver,
-					    guint            *status_code,
-					    gchar           **status_phrase);
+gboolean       soup_headers_parse_status_line (const char        *status_line,
+					       SoupHttpVersion  *ver,
+					       guint            *status_code,
+					       gchar           **status_phrase);
+
+gboolean       soup_headers_parse_response    (gchar            *str, 
+					       gint              len, 
+					       GHashTable       *dest,
+					       SoupHttpVersion  *ver,
+					       guint            *status_code,
+					       gchar           **status_phrase);
 
 #endif /*SOUP_HEADERS_H*/
